--- a/front-end/VeritasApp/env.example
+++ b/front-end/VeritasApp/env.example
@@ -1,7 +1,9 @@
 # Veritas Front-End Environment Configuration
 
+
 # API Configuration
 EXPO_PUBLIC_API_URL=https://api.veritas.com
+EXPO_PUBLIC_GEMINI_API_KEY=your_gemini_api_key_here
 
 # Development Configuration
 EXPO_PUBLIC_ENVIRONMENT=development
