--- a/front-end/VeritasApp/package.json
+++ b/front-end/VeritasApp/package.json
@@ -21,12 +21,15 @@
     "build:android": "expo build:android",
     "build:ios": "expo build:ios",
     "build:web": "expo build:web",
+    "vercel-build": "npx expo export:web",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/webpack-config": "^19.0.0",
+    "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
