--- a/front-end/VeritasApp/vercel.json
+++ b/front-end/VeritasApp/vercel.json
@@ -1,4 +1,5 @@
 {
+  "description": "Veritas Expo Web App - Digital Asset Verification Platform",
   "buildCommand": "npx expo export:web",
   "outputDirectory": "web-build",
   "installCommand": "npm install",
