--- a/front-end/VeritasApp/vercel.json
+++ b/front-end/VeritasApp/vercel.json
@@ -1,7 +1,7 @@
 {
   
   "buildCommand": "npx expo export",
-  "outputDirectory": "web-build",
+  "outputDirectory": "dist",
   "installCommand": "npm install",
   "devCommand": "npx expo start --web",
   "regions": ["iad1"]
